--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/njisaf/craph/issues"
+  },
+  "homepage": "https://github.com/njisaf/craph#readme",
   "dependencies": {
-    "eslint": "^4.16.0",
+    "bootstrap": "^3.3.7",
+    "eslint": "^4.18.0",
     "jquery": "^3.3.1",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
+    "mobx": "^3.5.1",
+    "mobx-react": "^4.4.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.5",
+    "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
@@ -31,25 +36,21 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "compression-webpack-plugin": "^1.1.3",
+    "compress-webpack-plugin": "^1.0.6",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.9",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.6.0",
+    "eslint-plugin-react": "^7.6.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.10",
+    "postcss-loader": "^2.1.0",
     "precss": "^3.1.0",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
+    "style-loader": "^0.20.2",
+    "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
-  },
-  "bugs": {
-    "url": "https://github.com/njisaf/craph/issues"
-  },
-  "homepage": "https://github.com/njisaf/craph#readme"
+  }
 }
