--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/njisaf/craph.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Nassir Isaf <nasisaf@publicisgroupe.net>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/njisaf/craph/issues"
