--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "compress-webpack-plugin": "^1.0.6",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.9",
+    "debug": "^3.1.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.6.1",
     "extract-text-webpack-plugin": "^3.0.2",
