--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.7",
     "eslint": "^4.18.0",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.2",
     "react": "^16.2.0",
