too goddamn lazy to actually find a video to load

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "copyassets": "copyfiles ./fonts/**/* ./images/**/* ./build/",
     "build": "rm -rf build & npm run copyassets & webpack -p",
-    "start": "npm run copyassets & webpack-dev-server --hot --open --env=dev --progress"
+    "start": "npm run copyassets & webpack-dev-server --hot --open --env=dev --progress",
+    "debug": "npm run copyassets & webpack-dev-server --hot --open --env=dev --progress NODE_ENV=DEBUG"
   },
   "repository": {
     "type": "git",
