--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.3.0-alpha.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
