--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "js-cookie": "^2.2.0",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.3.0-alpha.1"
+    "react": "^16.3.0-alpha.1",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
