--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "eslint": "^4.18.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
-    "mobx": "^3.5.1",
-    "mobx-react": "^4.4.2",
-    "react": "^16.3.0-alpha.1",
-    "react-dom": "^16.2.0"
+    "react": "^16.3.0",
+    "react-dom": "^16.2.0",
+    "react-waterfall": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
@@ -53,6 +52,7 @@
     "postcss-loader": "^2.1.0",
     "precss": "^3.1.0",
     "react-hot-loader": "^3.1.3",
+    "react-waterfall-redux-devtools-middleware": "^3.0.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
