--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-    "presets": ["env", "react"],
-    "plugins": [
-        "transform-decorators-legacy",
-        "transform-class-properties"
-    ]
+  "presets": ["env", "react"]
 }
