--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "This is madness",
   "main": "index.js",
   "scripts": {
-    "copyassets": "copyfiles ./content/**/* ./fonts/**/* ./images/**/* ./vendors/**/* ./build/",
-    "build": "rm -rf build & npm run copyassets & webpack -p",
-    "start": "npm run copyassets & webpack-dev-server --hot --open --env=dev --progress",
-    "debug": "npm run copyassets & webpack-dev-server --hot --open --env=dev --progress NODE_ENV=DEBUG"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.jsx"
   },
   "repository": {
     "type": "git",
@@ -31,31 +29,9 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^8.0.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "compress-webpack-plugin": "^1.0.6",
-    "copyfiles": "^1.2.0",
-    "css-loader": "^0.28.9",
-    "debug": "^3.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.6.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.0",
-    "precss": "^3.1.0",
-    "react-hot-loader": "^3.1.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "node-sass": "^4.8.3",
+    "parcel-bundler": "^1.7.0"
   }
 }
