--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is madness",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.jsx"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.jsx"
   },
   "repository": {
     "type": "git",
@@ -26,9 +26,12 @@
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.2",
     "react": "^16.3.1",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "node-sass": "^4.8.3",
